Use Authority and Operator types out of OrganisationRegistry