@@ -19,7 +19,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import no.entur.uttu.export.netex.NetexExportContext;
 import no.entur.uttu.model.Network;
 import no.entur.uttu.model.job.SeverityEnumeration;
@@ -29,7 +28,6 @@ import org.rutebanken.netex.model.AuthorityRef;
 import org.rutebanken.netex.model.KeyValueStructure;
 import org.rutebanken.netex.model.Operator;
 import org.rutebanken.netex.model.OperatorRefStructure;
-import org.rutebanken.netex.model.Organisation;
 import org.rutebanken.netex.model.Organisation_VersionStructure;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -41,9 +39,6 @@ public class OrganisationProducer {
     "#{${no.entur.uttu.organisations.overrides:{T(java.util.Collections).emptyMap()}}}"
   )
   private Map<String, Map<String, String>> organisationsOverrides;
-
-  @Value("${no.entur.uttu.organisations.convert-org-id:false}")
-  private boolean convertOrgId;
 
   private final OrganisationRegistry organisationRegistry;
 
@@ -57,14 +52,11 @@ public class OrganisationProducer {
       .map(Network::getAuthorityRef)
       .distinct()
       .map(ref -> mapAuthority(ref, context))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   public List<Operator> produceOperators(NetexExportContext context) {
-    return context.operatorRefs
-      .stream()
-      .map(ref -> mapOperator(ref, context))
-      .collect(Collectors.toList());
+    return context.operatorRefs.stream().map(ref -> mapOperator(ref, context)).toList();
   }
 
   public AuthorityRef produceAuthorityRef(
@@ -95,9 +87,7 @@ public class OrganisationProducer {
   }
 
   private Authority mapAuthority(String authorityRef, NetexExportContext context) {
-    Optional<Organisation> orgRegAuthority = organisationRegistry.getOrganisation(
-      authorityRef
-    );
+    Optional<Authority> orgRegAuthority = organisationRegistry.getAuthority(authorityRef);
     if (orgRegAuthority.isEmpty()) {
       context.addExportMessage(
         SeverityEnumeration.ERROR,
@@ -107,7 +97,7 @@ public class OrganisationProducer {
       return new Authority();
     }
 
-    Organisation organisation = orgRegAuthority.get();
+    Authority organisation = orgRegAuthority.get();
 
     if (
       organisation.getContactDetails() == null ||
@@ -120,8 +110,7 @@ public class OrganisationProducer {
       );
     }
 
-    return populateNetexOrganisation(new Authority(), organisation)
-      .withId(getAuthorityNetexId(organisation));
+    return organisation.withId(getAuthorityNetexId(organisation));
   }
 
   private boolean validateContactUrl(String url) {
@@ -129,9 +118,7 @@ public class OrganisationProducer {
   }
 
   private Operator mapOperator(String operatorRef, NetexExportContext context) {
-    Optional<Organisation> orgRegOperator = organisationRegistry.getOrganisation(
-      operatorRef
-    );
+    Optional<Operator> orgRegOperator = organisationRegistry.getOperator(operatorRef);
 
     if (orgRegOperator.isEmpty()) {
       context.addExportMessage(
@@ -142,35 +129,25 @@ public class OrganisationProducer {
       return new Operator();
     }
 
-    Organisation organisation = orgRegOperator.get();
+    Operator organisation = orgRegOperator.get();
 
-    return populateNetexOrganisation(new Operator(), organisation)
+    return organisation
       .withId(getOperatorNetexId(organisation))
       .withCustomerServiceContactDetails(organisation.getContactDetails());
   }
 
-  private <N extends Organisation_VersionStructure> N populateNetexOrganisation(
-    N netexOrg,
-    Organisation orgRegOrg
-  ) {
-    netexOrg
-      .withVersion(orgRegOrg.getVersion())
-      .withName(orgRegOrg.getName())
-      .withCompanyNumber(orgRegOrg.getCompanyNumber())
-      .withContactDetails(orgRegOrg.getContactDetails())
-      .withLegalName(orgRegOrg.getLegalName());
-    return netexOrg;
-  }
-
-  private String getOperatorNetexId(Organisation organisation) {
+  private String getOperatorNetexId(Operator organisation) {
     return getNetexId(organisation, "Operator");
   }
 
-  private String getAuthorityNetexId(Organisation organisation) {
+  private String getAuthorityNetexId(Authority organisation) {
     return getNetexId(organisation, "Authority");
   }
 
-  private String getNetexId(Organisation organisation, String type) {
+  private <T extends Organisation_VersionStructure> String getNetexId(
+    T organisation,
+    String type
+  ) {
     if (
       organisationsOverrides.containsKey(organisation.getId()) &&
       organisationsOverrides.get(organisation.getId()).containsKey(type)
@@ -181,14 +158,13 @@ public class OrganisationProducer {
     String legacyId = extractLegacyId(organisation, type);
     if (legacyId != null) return legacyId;
 
-    if (convertOrgId) {
-      return organisation.getId().replace("Organisation", type);
-    }
-
     return organisation.getId();
   }
 
-  protected static String extractLegacyId(Organisation organisation, String type) {
+  protected static <T extends Organisation_VersionStructure> String extractLegacyId(
+    T organisation,
+    String type
+  ) {
     return Optional
       .ofNullable(organisation.getKeyList())
       .flatMap(kl ->
